# msx-swap

./: .gitignore  Cargo.toml
common/modules/token_send/: Cargo.toml
common/structs/: Cargo.toml
common/structs/src/: lib.rs
meta/: Cargo.toml
meta/src/: main.rs
scenarios/: adder.scen.json
src/: bridge.rs
tests/: adder_mandos_constructed_raw_test.rs  adder_mandos_constructed_with_calls_test.rs  adder_mandos_constructed_with_results_test.rs  adder_scenario_rs_test.rs  adder_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
